# Discord-Bot

./: Cargo.toml
src/: main.rs
src/api/: deserialize.rs  errors.rs  fetch.rs  mod.rs
src/commands/: info.rs  mod.rs  panel.rs  ping.rs
src/handlers/: guild_create.rs  guild_create_handler.rs  guild_member_addition.rs  interaction_create.rs  message.rs  ready.rs
src/models/: user.rs
