[package]
name = "rust-guild-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.52.0"
shuttle-serenity = "0.52.0"
tokio = "1.26.0"
tracing = "0.1.37"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.12", features = ["json"] }